--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <script type="module" src="./js/pixabay-api.js"></script>
-    <script type="module" src="./js/render-function.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
